[package]
name = "problems"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-bigint = "0.4"
itertools = "0.10"
rand = "0.8"

[dev-dependencies]
env_logger = "0.8.3"
quickcheck = "1"
quickcheck_macros = "1"
num-bigint = { version = "0.4", features = ["quickcheck"] }
